<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button15"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_1" />

            <Button
                android:id="@+id/button11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_2" />

            <Button
                android:id="@+id/button14"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_4" />

            <Button
                android:id="@+id/button16"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_5" />

            <Button
                android:id="@+id/button12"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button19"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_7" />

            <Button
                android:id="@+id/button13"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_8" />

            <Button
                android:id="@+id/button18"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/button_1_9" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>